# jui_test

./: Cargo.toml  Readme.md  build.rs
src/: main.rs
view/: main.slint  test_view.slint
